--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/": "react-navigation/native",
     "@types/axios": "^0.14.0",
     "@types/intl": "^1.2.0",
     "@types/jest": "^25.2.3",
-    "@types/react-native": "^0.63.2",
+    "@types/react": "^17.0.0",
+    "@types/react-native": "^0.63.43",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.4",
